# SimpleBankingTaskDemo

./: .gitignore  CMakeLists.txt
.claude/: settings.json  statusline.sh
.claude/agents/: coverage-agent.md  green-agent.md  prompt-refactor-agent.md  red-agent.md  refactor-agent.md  test-review-agent.md  test-runner.md
.claude/hooks/: notify-balloon.ps1  notify-custom.ps1  notify-detached.ps1  notify-popup.ps1  notify-toast.ps1  notify.ps1  notify.sh
.claude/rules/: agent-logging.md  coding-rules.md  infrastructure.md  prompt-rules.md  tdd-rules.md  technology-loading.md  workflow.md
.claude/skills/api-spec/: SKILL.md
.claude/skills/architecture/: SKILL.md
.claude/skills/continue/: SKILL.md
.claude/skills/design-preview/: SKILL.md
.claude/skills/doc/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/interview/: SKILL.md
.claude/skills/prompt-refactor/: SKILL.md
.claude/skills/prompt-update/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/run-backend/: SKILL.md
ProductSpecification/: BriefProductDescription.md  ExpectedLoad.md  stories.md  technology.md
ProductSpecification/api-specs/: auth_login_logout.yaml
acceptance/: CMakeLists.txt
acceptance/tests/backend/: backend_test_fixture.h
acceptance/tests/backend/auth/: auth_acceptance_test.cpp
acceptance/tests/clients/application/: application_client.h
acceptance/tests/clients/application/dto/auth/: login_request.h  login_response.h
acceptance/tests/statements/: auth_statements.h
backend/: CMakeLists.txt
backend/adapters/http/: CMakeLists.txt
backend/adapters/http/include/adapters/http/: exception_handler.h
backend/adapters/http/include/adapters/http/auth/: login_controller.h
backend/adapters/http/src/: exception_handler.cpp
backend/adapters/http/src/auth/: login_controller.cpp
backend/adapters/http/tests/auth/: login_controller_test.cpp
backend/adapters/http/tests/statements/: login_controller_statements.h
backend/domain/: CMakeLists.txt
backend/server/: CMakeLists.txt  main.cpp  server_configurator.cpp  server_configurator.h
backend/server/tests/: server_routing_test.cpp
backend/usecase/: CMakeLists.txt
backend/usecase/include/usecase/auth/: login_response.h  login_usecase.h
backend/usecase/src/auth/: login_usecase.cpp
backend/usecase/tests/: application_test.h
backend/usecase/tests/auth/login/: login_test.cpp
backend/usecase/tests/scope/: login_scope.h
backend/usecase/tests/statements/: auth_statements.h
infrastructure/scripts/: run-backend.sh  setup-ports.sh  stop-backend.sh  test-acceptance.sh
(+176 files in other folders)
